parseado exitoso de las categorias con recoleccion de datos del libro (sin autores aun)

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -55,306 +55,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<li>\n",
-      " <a href=\"catalogue/category/books/travel_2/index.html\">\n",
-      "  Travel\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/mystery_3/index.html\">\n",
-      "  Mystery\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/historical-fiction_4/index.html\">\n",
-      "  Historical Fiction\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/sequential-art_5/index.html\">\n",
-      "  Sequential Art\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/classics_6/index.html\">\n",
-      "  Classics\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/philosophy_7/index.html\">\n",
-      "  Philosophy\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/romance_8/index.html\">\n",
-      "  Romance\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/womens-fiction_9/index.html\">\n",
-      "  Womens Fiction\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/fiction_10/index.html\">\n",
-      "  Fiction\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/childrens_11/index.html\">\n",
-      "  Childrens\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/religion_12/index.html\">\n",
-      "  Religion\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/nonfiction_13/index.html\">\n",
-      "  Nonfiction\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/music_14/index.html\">\n",
-      "  Music\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/default_15/index.html\">\n",
-      "  Default\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/science-fiction_16/index.html\">\n",
-      "  Science Fiction\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/sports-and-games_17/index.html\">\n",
-      "  Sports and Games\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/add-a-comment_18/index.html\">\n",
-      "  Add a comment\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/fantasy_19/index.html\">\n",
-      "  Fantasy\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/new-adult_20/index.html\">\n",
-      "  New Adult\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/young-adult_21/index.html\">\n",
-      "  Young Adult\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/science_22/index.html\">\n",
-      "  Science\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/poetry_23/index.html\">\n",
-      "  Poetry\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/paranormal_24/index.html\">\n",
-      "  Paranormal\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/art_25/index.html\">\n",
-      "  Art\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/psychology_26/index.html\">\n",
-      "  Psychology\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/autobiography_27/index.html\">\n",
-      "  Autobiography\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/parenting_28/index.html\">\n",
-      "  Parenting\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/adult-fiction_29/index.html\">\n",
-      "  Adult Fiction\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/humor_30/index.html\">\n",
-      "  Humor\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/horror_31/index.html\">\n",
-      "  Horror\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/history_32/index.html\">\n",
-      "  History\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/food-and-drink_33/index.html\">\n",
-      "  Food and Drink\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/christian-fiction_34/index.html\">\n",
-      "  Christian Fiction\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/business_35/index.html\">\n",
-      "  Business\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/biography_36/index.html\">\n",
-      "  Biography\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/thriller_37/index.html\">\n",
-      "  Thriller\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/contemporary_38/index.html\">\n",
-      "  Contemporary\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/spirituality_39/index.html\">\n",
-      "  Spirituality\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/academic_40/index.html\">\n",
-      "  Academic\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/self-help_41/index.html\">\n",
-      "  Self Help\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/historical_42/index.html\">\n",
-      "  Historical\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/christian_43/index.html\">\n",
-      "  Christian\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/suspense_44/index.html\">\n",
-      "  Suspense\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/short-stories_45/index.html\">\n",
-      "  Short Stories\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/novels_46/index.html\">\n",
-      "  Novels\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/health_47/index.html\">\n",
-      "  Health\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/politics_48/index.html\">\n",
-      "  Politics\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/cultural_49/index.html\">\n",
-      "  Cultural\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/erotica_50/index.html\">\n",
-      "  Erotica\n",
-      " </a>\n",
-      "</li>\n",
-      "\n",
-      "<li>\n",
-      " <a href=\"catalogue/category/books/crime_51/index.html\">\n",
-      "  Crime\n",
-      " </a>\n",
-      "</li>\n",
-      "\n"
+      "https://books.toscrape.com/catalogue/category/books/travel_2/index.html\n"
      ]
     }
    ],
@@ -379,10 +80,32 @@
     "list_all_categories_tag = ubication_categories_tag.find_all(\"li\")\n",
     "\n",
     "for elemento in list_all_categories_tag:\n",
-    "    #print(elemento.prettify()) # funciono\n",
+    "    \n",
+    "    # ------- nombre de la categoria --------\n",
     "    category_name = elemento.a.get_text(strip=True)\n",
-    "    print(category_name)\n",
-    "    break\n"
+    "    # ----------------------------------------\n",
+    "\n",
+    "    category_reference_url = elemento.a[\"href\"]\n",
+    "\n",
+    "    new_url = parse.urljoin(url_booksToScrape, category_reference_url)\n",
+    "    response = hacer_requests(new_url)\n",
+    "    category_eleccion_soup = BeautifulSoup(response.content, \"lxml\")\n",
+    "\n",
+    "    # --------- encontrar todos los libros de la categoria --------\n",
+    "    alert_alert_warning_tag = category_eleccion_soup.find(\"div\", class_=\"alert alert-warning\")\n",
+    "    \n",
+    "    list_of_books_tags = alert_alert_warning_tag.find_all(\"article\", class_=\"product_pod\")\n",
+    "\n",
+    "    for book in list_of_books_tags:\n",
+    "        print(book.prettify())\n",
+    "        break\n",
+    "    break\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "    \n"
    ]
   }
  ],
