modificacion del codigo para recolectar por medio de api los nombres de los autores de cada libro

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "2cb8117e",
    "metadata": {},
    "outputs": [],
@@ -21,7 +21,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "f815cdb6",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,10 @@
     "\n",
     "\n",
     "# ----- funcion para hacer request a los url  ------\n",
-    "def hacer_requests(URL, params=None, reintentos_posibles = 5, tiempo_espera = 1):\n",
+    "def hacer_requests(URL, params=None):\n",
+    "    reintentos_posibles = 5\n",
+    "    tiempo_espera = 1\n",
+    "    \n",
     "    time.sleep(tiempo_espera)\n",
     "    for intentos in range(reintentos_posibles):\n",
     "        try:\n",
@@ -42,7 +45,9 @@
     "        except:\n",
     "            print(f\"[error de conexion] : [intento {intentos + 1}] : [tiempo de espera : {tiempo_espera}]\")\n",
     "            time.sleep(tiempo_espera)\n",
-    "            tiempo_espera *= 2"
+    "            tiempo_espera *= 2\n",
+    "    \n",
+    "    return None"
    ]
   },
   {
@@ -55,7 +60,68 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "https://books.toscrape.com/catalogue/category/books/travel_2/index.html\n"
+      "Travel\n",
+      "[agregado] : [book : It's Only the Himalayas] : [author : ['S. Bedford']]\n",
+      "[agregado] : [book : Full Moon over Noah’s Ark: An Odyssey to Mount Ararat and Beyond] : [author : ['Rick Antonson']]\n",
+      "[agregado] : [book : See America: A Celebration of Our National Parks & Treasured Sites] : [author : ['none']]\n",
+      "[agregado] : [book : Vagabonding: An Uncommon Guide to the Art of Long-Term World Travel] : [author : ['Rolf Potts']]\n",
+      "[agregado] : [book : Under the Tuscan Sun] : [author : ['Frances Mayes']]\n",
+      "[agregado] : [book : A Summer In Europe] : [author : ['Mary Elizabeth Blake']]\n",
+      "[agregado] : [book : The Great Railway Bazaar] : [author : ['Paul Theroux']]\n",
+      "[agregado] : [book : A Year in Provence (Provence #1)] : [author : ['Peter Mayle']]\n",
+      "[agregado] : [book : The Road to Little Dribbling: Adventures of an American in Britain (Notes From a Small Island #2)] : [author : ['Bill Bryson']]\n",
+      "[agregado] : [book : Neither Here nor There: Travels in Europe] : [author : ['Bill Bryson']]\n",
+      "[agregado] : [book : 1,000 Places to See Before You Die] : [author : ['Patricia Schultz']]\n",
+      "Mystery\n",
+      "[agregado] : [book : Sharp Objects] : [author : ['Gillian Flynn']]\n",
+      "[agregado] : [book : In a Dark, Dark Wood] : [author : ['none']]\n",
+      "[agregado] : [book : The Past Never Ends] : [author : ['none']]\n",
+      "[agregado] : [book : A Murder in Time] : [author : ['Julie McElwain']]\n",
+      "[agregado] : [book : The Murder of Roger Ackroyd (Hercule Poirot #4)] : [author : ['Agatha Christie']]\n",
+      "[agregado] : [book : The Last Mile (Amos Decker #2)] : [author : ['David Baldacci']]\n",
+      "[agregado] : [book : That Darkness (Gardiner and Renner #1)] : [author : ['Lisa Black']]\n",
+      "[agregado] : [book : Tastes Like Fear (DI Marnie Rome #3)] : [author : ['none']]\n",
+      "[agregado] : [book : A Time of Torment (Charlie Parker #14)] : [author : ['Charlie Parker']]\n",
+      "[agregado] : [book : A Study in Scarlet (Sherlock Holmes #1)] : [author : ['Sir Arthur Conan Doyle']]\n",
+      "[agregado] : [book : Poisonous (Max Revere Novels #3)] : [author : ['none']]\n",
+      "[agregado] : [book : Murder at the 42nd Street Library (Raymond Ambler #1)] : [author : ['Con Lehane']]\n",
+      "[agregado] : [book : Most Wanted] : [author : ['Aubrey Hoffmann']]\n",
+      "[agregado] : [book : Hide Away (Eve Duncan #20)] : [author : ['Iris Johansen']]\n",
+      "[agregado] : [book : Boar Island (Anna Pigeon #19)] : [author : ['none']]\n",
+      "[agregado] : [book : The Widow] : [author : ['Nicolas Freeling']]\n",
+      "[agregado] : [book : Playing with Fire] : [author : ['none']]\n",
+      "[agregado] : [book : What Happened on Beale Street (Secrets of the South Mysteries #2)] : [author : ['Mary Ellis']]\n",
+      "[agregado] : [book : The Bachelor Girl's Guide to Murder (Herringford and Watts Mysteries #1)] : [author : ['none']]\n",
+      "[agregado] : [book : Delivering the Truth (Quaker Midwife Mystery #1)] : [author : ['Edith Maxwell']]\n",
+      "[next page : Mystery]\n",
+      "[agregado] : [book : The Mysterious Affair at Styles (Hercule Poirot #1)] : [author : ['Agatha Christie']]\n",
+      "[agregado] : [book : In the Woods (Dublin Murder Squad #1)] : [author : ['Tana French']]\n",
+      "[agregado] : [book : The Silkworm (Cormoran Strike #2)] : [author : ['Robert Galbraith']]\n",
+      "[agregado] : [book : The Exiled] : [author : ['Greg LaRocque']]\n",
+      "[agregado] : [book : The Cuckoo's Calling (Cormoran Strike #1)] : [author : ['Robert Galbraith', 'Joanne Kathleen Rowling']]\n",
+      "[agregado] : [book : Extreme Prey (Lucas Davenport #26)] : [author : ['John Sandford']]\n",
+      "[agregado] : [book : Career of Evil (Cormoran Strike #3)] : [author : ['Robert Galbraith']]\n",
+      "[agregado] : [book : The No. 1 Ladies' Detective Agency (No. 1 Ladies' Detective Agency #1)] : [author : ['Alexander McCall Smith']]\n",
+      "[agregado] : [book : The Girl You Lost] : [author : ['none']]\n",
+      "[agregado] : [book : The Girl In The Ice (DCI Erika Foster #1)] : [author : ['Robert Bryndza']]\n",
+      "[agregado] : [book : Blood Defense (Samantha Brinkman #1)] : [author : ['none']]\n",
+      "[agregado] : [book : 1st to Die (Women's Murder Club #1)] : [author : ['James Patterson']]\n",
+      "Historical Fiction\n",
+      "[agregado] : [book : Tipping the Velvet] : [author : ['Sarah Waters']]\n",
+      "[agregado] : [book : Forever and Forever: The Courtship of Henry Longfellow and Fanny Appleton] : [author : ['Josi S. Kilpack']]\n",
+      "[agregado] : [book : A Flight of Arrows (The Pathfinders #2)] : [author : ['David Nevin']]\n",
+      "[agregado] : [book : The House by the Lake] : [author : ['Hugh Mills']]\n",
+      "[agregado] : [book : Mrs. Houdini] : [author : ['Victoria Kelly']]\n",
+      "[agregado] : [book : The Marriage of Opposites] : [author : ['Alice Hoffman']]\n",
+      "[agregado] : [book : Glory over Everything: Beyond The Kitchen House] : [author : ['Kathleen Grissom']]\n",
+      "[agregado] : [book : Love, Lies and Spies] : [author : ['Cindy Anstey']]\n",
+      "[agregado] : [book : A Paris Apartment] : [author : ['Michelle Gable']]\n",
+      "[agregado] : [book : Lilac Girls] : [author : ['none']]\n",
+      "[agregado] : [book : The Constant Princess (The Tudor Court #1)] : [author : ['Philippa Gregory']]\n",
+      "[agregado] : [book : The Invention of Wings] : [author : ['dailyBooks']]\n",
+      "[agregado] : [book : World Without End (The Pillars of the Earth #2)] : [author : ['none']]\n",
+      "[agregado] : [book : The Passion of Dolssa] : [author : ['Julie Berry']]\n",
+      "[agregado] : [book : Girl With a Pearl Earring] : [author : ['Tracy Chevalier']]\n"
      ]
     }
    ],
@@ -67,7 +133,7 @@
     "\n",
     "# ----- URL a usar ------\n",
     "url_booksToScrape = \"https://books.toscrape.com/index.html\"\n",
-    "url_api_googleBooks = \"\"\n",
+    "url_api_googleBooks = \"https://www.googleapis.com/books/v1/volumes\"\n",
     "\n",
     "# ----- hacer conexion y soup ------\n",
     "respuesta = hacer_requests(url_booksToScrape)\n",
@@ -85,21 +151,87 @@
     "    category_name = elemento.a.get_text(strip=True)\n",
     "    # ----------------------------------------\n",
     "\n",
+    "    print(category_name)\n",
+    "\n",
     "    category_reference_url = elemento.a[\"href\"]\n",
     "\n",
     "    new_url = parse.urljoin(url_booksToScrape, category_reference_url)\n",
     "    response = hacer_requests(new_url)\n",
-    "    category_eleccion_soup = BeautifulSoup(response.content, \"lxml\")\n",
+    "    category_scan = True\n",
     "\n",
-    "    # --------- encontrar todos los libros de la categoria --------\n",
-    "    alert_alert_warning_tag = category_eleccion_soup.find(\"div\", class_=\"alert alert-warning\")\n",
-    "    \n",
-    "    list_of_books_tags = alert_alert_warning_tag.find_all(\"article\", class_=\"product_pod\")\n",
+    "    while category_scan:\n",
+    "        category_eleccion_soup = BeautifulSoup(response.content, \"lxml\")\n",
     "\n",
-    "    for book in list_of_books_tags:\n",
-    "        print(book.prettify())\n",
+    "        # --------- encontrar todos los libros de la categoria --------\n",
+    "        div_tag = category_eleccion_soup.find(\"div\", class_=\"col-sm-8 col-md-9\")\n",
+    "        section_tag = div_tag.find(\"section\")\n",
+    "        ol_tag = section_tag.find(\"ol\", class_=\"row\")\n",
+    "        \n",
+    "        list_of_books_tags = ol_tag.find_all(\"article\", class_=\"product_pod\")\n",
+    "\n",
+    "        for book in list_of_books_tags:\n",
+    "\n",
+    "            # ------- nombre del libro ----------\n",
+    "            book_name = book.div.a.img[\"alt\"]\n",
+    "            # -----------------------------------\n",
+    "\n",
+    "            # proceso para obtener autores\n",
+    "            params = {\n",
+    "                \"q\" : f\"intitle:{book_name}\"\n",
+    "            }\n",
+    "\n",
+    "            try:\n",
+    "                response_api = hacer_requests(url_api_googleBooks, params)\n",
+    "                data = response_api.json()\n",
+    "                items = data[\"items\"][0]\n",
+    "                volume_info = items[\"volumeInfo\"]\n",
+    "\n",
+    "                # --------- autores del libro ----------\n",
+    "                authors = volume_info.get(\"authors\", [])\n",
+    "                # --------------------------------------\n",
+    "\n",
+    "                if len(authors) == 0:\n",
+    "                    authors = [\"none\"]\n",
+    "\n",
+    "            except:\n",
+    "                # por si google me deniega\n",
+    "                authors = ['none']\n",
+    "\n",
+    "            # ------ cantidad de estrellas ------\n",
+    "            stars = book.p[\"class\"][1]\n",
+    "            # -----------------------------------\n",
+    "\n",
+    "            product_price_tag = book.find(\"div\", class_=\"product_price\")\n",
+    "\n",
+    "            # ------ precio del libro ---------------------\n",
+    "            price = product_price_tag.p.get_text(strip=True)\n",
+    "            # ----------------------------------------------\n",
+    "\n",
+    "            p_tag = product_price_tag.find(\"p\", class_=\"instock availability\")\n",
+    "\n",
+    "            # ------- si el libro esta en stock ------------\n",
+    "            in_stock = p_tag.get_text(strip=True)\n",
+    "            # ----------------------------------------------\n",
+    "\n",
+    "            authors_books.append((category_name, {\n",
+    "                \"title\" : book_name,\n",
+    "                \"authors\" : authors,\n",
+    "                \"stars\" : stars,\n",
+    "                \"price\" : price,\n",
+    "                \"stock\" : in_stock\n",
+    "            }))\n",
+    "            print(f\"[agregado] : [book : {book_name}] : [author : {authors}]\")\n",
+    "        \n",
+    "        next_tag = section_tag.find(\"li\", class_=\"next\")\n",
+    "        \n",
+    "        if next_tag:\n",
+    "            next_url = next_tag.a[\"href\"]\n",
+    "            next_page_url = parse.urljoin(new_url, next_url)\n",
+    "            print(f\"[next page : {category_name}]\")\n",
+    "            response = hacer_requests(next_page_url)\n",
+    "            continue\n",
+    "\n",
     "        break\n",
-    "    break\n",
     "\n",
     "\n",
     "\n",
