agregacion de consultas basicas a la base de datos dentro del notebook

--- a/scraper.ipynb
+++ b/scraper.ipynb
@@ -2322,6 +2322,168 @@
     "conexion.commit()\n",
     "conexion.close()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ffb24c97",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>title</th>\n",
+       "      <th>stars</th>\n",
+       "      <th>authors</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>\"Most Blessed of the Patriarchs\": Thomas Jeffe...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Annette Gordon-Reed, Peter S. Onuf</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>#GIRLBOSS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>Libros Maestros</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>#HigherSelfie: Wake Up Your Life. Free Your So...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Lucy Sheridan, Jo Westwood</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>'Salem's Lot</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Stephen King</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(Un)Qualified: How God Uses Broken People to D...</td>\n",
+       "      <td>5</td>\n",
+       "      <td>Steven Furtick</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>994</th>\n",
+       "      <td>Zealot: The Life and Times of Jesus of Nazareth</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Reza Aslan</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>995</th>\n",
+       "      <td>Zero History (Blue Ant #3)</td>\n",
+       "      <td>1</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>996</th>\n",
+       "      <td>Zero to One: Notes on Startups, or How to Buil...</td>\n",
+       "      <td>3</td>\n",
+       "      <td>Peter Thiel, Blake Masters</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>997</th>\n",
+       "      <td>orange: The Complete Collection 1 (orange: The...</td>\n",
+       "      <td>1</td>\n",
+       "      <td>none</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>998</th>\n",
+       "      <td>salt.</td>\n",
+       "      <td>4</td>\n",
+       "      <td>Pierre Laszlo</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>999 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 title stars  \\\n",
+       "0    \"Most Blessed of the Patriarchs\": Thomas Jeffe...     5   \n",
+       "1                                            #GIRLBOSS     1   \n",
+       "2    #HigherSelfie: Wake Up Your Life. Free Your So...     5   \n",
+       "3                                         'Salem's Lot     4   \n",
+       "4    (Un)Qualified: How God Uses Broken People to D...     5   \n",
+       "..                                                 ...   ...   \n",
+       "994    Zealot: The Life and Times of Jesus of Nazareth     3   \n",
+       "995                         Zero History (Blue Ant #3)     1   \n",
+       "996  Zero to One: Notes on Startups, or How to Buil...     3   \n",
+       "997  orange: The Complete Collection 1 (orange: The...     1   \n",
+       "998                                              salt.     4   \n",
+       "\n",
+       "                                authors  \n",
+       "0    Annette Gordon-Reed, Peter S. Onuf  \n",
+       "1                       Libros Maestros  \n",
+       "2            Lucy Sheridan, Jo Westwood  \n",
+       "3                          Stephen King  \n",
+       "4                        Steven Furtick  \n",
+       "..                                  ...  \n",
+       "994                          Reza Aslan  \n",
+       "995                                none  \n",
+       "996          Peter Thiel, Blake Masters  \n",
+       "997                                none  \n",
+       "998                       Pierre Laszlo  \n",
+       "\n",
+       "[999 rows x 3 columns]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "import sqlite3\n",
+    "\n",
+    "conexion = sqlite3.connect(\"dataBase.db\")\n",
+    "\n",
+    "query = \"\"\"\n",
+    "    SELECT \n",
+    "        Books.title,\n",
+    "        Books.stars,\n",
+    "        GROUP_CONCAT(Authors.name, \", \") AS authors\n",
+    "    FROM Books\n",
+    "    JOIN Books_authors ON Books.id = Books_authors.id_book\n",
+    "    JOIN Authors ON Books_authors.id_author = Authors.id\n",
+    "    GROUP BY Books.title;\n",
+    "\"\"\"\n",
+    "\n",
+    "df = pd.read_sql_query(query, conexion)\n",
+    "\n",
+    "conexion.close()\n",
+    "\n",
+    "display(df)"
+   ]
   }
  ],
  "metadata": {
